@@ -1,14 +1,15 @@
 $Id$
 
-2004-04-05 (Ilja Booij):
-Messages that are forwarded get the wrong status (TEMP FAIL).
-This status is sent to the MTA, which tries to deliver the
-message again. Because of this, forwarded messages are delivered
-multiple times.
-
 2004-01-19 (Roel Rozendaal):
 FETCH MSGNUM (RFC822.HEADER) returns headers in wrong order.
 
 2004-03-24 (Aaron Stone):
 The mime parser chokes on some messages, probably due to some
 '\n'-'\r\n' mismatch
+
+2004-05-06 (Ilja Booij):
+Messages with only a header only get accepted when they have more
+than 1 header line. If messages with only headers should get accepted,
+they should probably also be accepted if they have only one line of
+headers. In practice, this bug is not really a problem, but it
+should be taken care of nonetheless.
